--- a/src/App.css
+++ b/src/App.css
@@ -76,6 +76,10 @@ body {
     justify-content: center;
     background-color: rgb(80, 53, 142);
     height: 650px;
+    gap: 150px;
+}
+.landing-main-ctn img {
+    height: 400px;
 }
 .landing-main-title-ctn {
     display: flex;
@@ -92,6 +96,7 @@ body {
     font-size: 35px;
 }
 
+
 .landing-section-one-ctn {
     display: flex;
     flex-direction: column;
@@ -107,6 +112,9 @@ body {
     justify-content: center;
     width: 50vw;
     height: 325px;
+}
+.landing-section-one-ctn img {
+    height: 300px;
 }
 
 .landing-section-two-ctn {
@@ -134,6 +142,9 @@ body {
     text-align: center;
     width: 50vw;
 }
+.landing-section-three-ctn img {
+    height: 800px;
+}
 
 .landing-section-four-ctn { 
     display: flex;
@@ -147,6 +158,9 @@ body {
     text-align: center;
     width: 50vw;
 }
+.landing-section-four-ctn img {
+    height: 500px;
+}
 
 .landing-section-five-ctn { 
     display: flex;
@@ -159,6 +173,9 @@ body {
 .landing-section-five-ctn div {
     text-align: center;
     width: 50vw;
+}
+.landing-section-five-ctn img {
+    height: 500px;
 }
 
 
