Slight image rotation fix

--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,7 @@ body {
 }
 .landing-main-ctn img {
     height: 400px;
+    transform: rotate(-72deg);
 }
 .landing-main-title-ctn {
     display: flex;
