--- a/src/App.css
+++ b/src/App.css
@@ -240,3 +240,48 @@ body {
     font-weight: bold;
     color: orange;
 }
+
+/* FORMS */
+.form-page-top-level {
+    background-color: rgb(229, 227, 227);
+    height: 100vh;
+}
+.form-ctn {
+    font-family: "Audiowide", "Tahoma", "Serif";
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.form-ctn h1 {
+    text-decoration: underline;
+}
+.form-signup {
+    border: double 10px black;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    padding: 20px;
+    background-color: rgb(80, 53, 142);
+}
+.form-field-ctn {
+    display: flex;
+    justify-content: space-between;
+    gap: 10px;
+    color: white;
+}
+.form-field-ctn input {
+    background-color: blueviolet;
+    color: white;
+}
+.form-field-ctn ::placeholder {
+    color: rgb(188, 188, 188);
+}
+.form-signup button {
+    font-family: "Audiowide", "Tahoma", "Serif";
+    background-color: green;
+    color: white;
+    font-weight: bold;
+    border-radius: 20px;
+    border-color: greenyellow;
+    padding: 10px;
+}
