--- a/src/App.css
+++ b/src/App.css
@@ -295,6 +295,10 @@ body {
 .form-hidden {
     visibility: hidden;
 }
+.form-error-message {
+    color: red;
+    text-align: center;
+}
 .small-print {
     font-size: 12px;
     color: gray;
@@ -302,6 +306,7 @@ body {
 
 /* FOOTER */
 .footer-ctn {
+    font-family: "Audiowide", "Tahoma", "Serif";
     display: flex;
     flex-direction: column;
 }
