--- a/src/App.css
+++ b/src/App.css
@@ -273,7 +273,14 @@ body {
     background-color: ivory;
     color: black;
 }
-.tournament-create-form-field-ctn input, textarea {
+.tournament-create-form-field-ctn input, 
+.tournament-create-form-field-ctn textarea,
+.tournament-create-form-field-ctn option {
+    font-family: "Audiowide", "Tahoma", "Serif";
+    background-color: ivory;
+    color: black;
+}
+.tournament-create-form-select {
     font-family: "Audiowide", "Tahoma", "Serif";
     background-color: ivory;
     color: black;
@@ -298,10 +305,51 @@ body {
 .form-error-message {
     color: red;
     text-align: center;
+    background-color: rgb(255, 147, 147);
 }
 .small-print {
     font-size: 12px;
     color: gray;
+}
+
+/* DISPLAY TOURNAMENT */
+.tournament-card-title {
+    text-align: center;
+}
+.tournament-card {
+    display: flex;
+    justify-content: space-around;
+    padding: 50px;
+}
+.tournament-card-section {
+    display: flex;
+    flex-direction: column;
+    width: 33vw;
+}
+.tournament-card-section textarea {
+    width: 80%;
+}
+.tournament-card ul {
+    list-style-type: none;
+}
+.tournament-card-map {
+    width: 100%;
+    height: 300px; 
+    /* frameBorder: 0; */
+}
+.tournament-card-participant-list {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 10px;
+
+}
+.tournament-card-participant-list li {
+    border: 1px black solid;
+    padding: 10px 30px;
+    width: 200px;
+    text-align: center;
 }
 
 /* FOOTER */
