--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@ body {
 
 /* SCROLL BAR */
 ::-webkit-scrollbar {
-    width: 10px;
+    width: 7px;
+    height: 7px;
 }
 ::-webkit-scrollbar-track {
     box-shadow: inset 0 0 5px rgb(70, 2, 104);
@@ -344,9 +345,29 @@ body {
 }
 
 /* DISPLAY TOURNAMENT */
+.tournament-card-main-ctn {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(228, 228, 227);
+}
 .tournament-card-btn-ctn {
     display: flex;
     justify-content: center;
+}
+.tournament-card-participate {
+    font-family: "Audiowide", "Tahoma", "Serif";
+    background-color: rgb(54, 38, 96);
+    color: white;
+    border: 2px white solid;
+    border-radius: 20px;
+    padding: 10px 15px;
+    font-size: 15px
+}
+.tournament-card-participate:hover {    
+    background-color: rgb(91, 161, 56);
+    color: rgb(255, 255, 255);
+    font-weight: bold;
+    cursor: pointer;
 }
 .tournament-card-edit {
     font-family: "Audiowide", "Tahoma", "Serif";
@@ -383,41 +404,84 @@ body {
 }
 .tournament-card {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     padding: 50px;
 }
 .tournament-card-section {
     display: flex;
     flex-direction: column;
-    width: 33vw;
+    width: 500px;
+    height: auto;
+    padding: 50px;
+    border: 1px black solid;
+    border-radius: 16px;
 }
 .tournament-card-section textarea {
+    font-family: "Audiowide", "Tahoma", "Serif";
+    background-color: darkslateblue;
+    color: white;
     width: 80%;
+    padding: 20px;
 }
 .tournament-card ul {
     list-style-type: none;
-}
-.tournament-card-map {
-    width: 100%;
-    height: 300px; 
-    /* frameBorder: 0; */
+    padding-left: 5px;
 }
 .tournament-card-participant-list {
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
     justify-content: flex-start;
     gap: 10px;
-
+    width: 300px;
+    height: 100%;
+    overflow-y: scroll;
 }
 .tournament-card-participant-list li {
     border: 1px black solid;
     padding: 10px 30px;
-    width: 200px;
+    width: 150px;
     text-align: center;
+}
+.tournament-card-comment-main-ctn {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+.tournament-card-comment-section {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: black solid 1px;
+    border-radius: 16px;
+    width: 80%;
+}
+.tournament-card-comment-section textarea {
+    font-family: "Audiowide", "Tahoma", "Serif";
+    background-color: darkslateblue;
+    color: white;
+    width: 80%;
+    padding: 20px;
+}
+.tournament-card-delete-comment {
+    font-family: "Audiowide", "Tahoma", "Serif";
+    background-color: rgb(54, 38, 96);
+    color: white;
+    border: 2px white solid;
+    border-radius: 20px;
+    padding: 5px 8px;
+    font-size: 10px
+}
+.tournament-card-delete-comment:hover {    
+    background-color: rgb(218, 28, 28);
+    color: purple;
+    font-weight: bold;
+    cursor: pointer;
 }
 .status-format {
     padding: 5px 15px;
+    border: 1px black solid;
 }
 .status-open {
     background-color: rgb(198, 255, 112);
