--- a/src/App.css
+++ b/src/App.css
@@ -206,6 +206,55 @@ body {
     height: auto;
 }
 
+/* MEMBERSHIP OPTIONS */
+.membership-options-main-ctn {
+    font-family: "Audiowide", "Tahoma", "Serif";
+    padding: 20px;
+    padding-bottom: 50px;
+}
+.membership-option-card-ctn {
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+}
+.membership-option-card-ctn h3 {
+    border: 1px black solid;
+    padding: 15px;
+}
+.membership-option-card-ctn p {
+    height: 100px;
+}
+.membership-option-card-ctn ul {
+    list-style-type: none;
+    padding-left: 0;
+    border: 1px solid black;
+    padding: 15px;
+    height: 40%
+}
+.membership-option-card {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    border: 1px solid purple;
+    width: 300px;
+    height: 600px;
+    padding: 20px;
+}
+.membership-option-card button {
+    font-family: "Audiowide", "Tahoma", "Serif";
+    width: 150px;
+    height: 75px;
+    font-size: 20px;
+    background-color: #dcfaff;
+    border-radius: 16px;
+}
+.membership-option-card button:hover {
+    cursor: pointer;
+    background-color: rgb(112, 255, 124);
+    color: white;
+}
+
 /* HOME */
 .home-ctn {
     /* background-color: rgb(229, 227, 227); */
