--- a/src/App.css
+++ b/src/App.css
@@ -924,3 +924,14 @@ button {
     text-align: center;
     font-size: 12px;
 }
+
+.profile-settings-form {
+display: flex;
+flex-direction: column;
+justify-content: left;
+align-items: center;
+ width: 100%;
+ margin-top: 20px;
+ margin-bottom: 20px;
+
+}
