--- a/src/App.css
+++ b/src/App.css
@@ -1160,6 +1160,10 @@ input[type="color"]::-webkit-color-swatch {
     color: rgb(182, 182, 182);
 }
 
+.profile-settings-form-top-level {
+    background-color: rgb(229, 227, 227);
+    
+}
 .profile-settings-form {
     margin-top: -10px;
     padding : 50px ; 
