--- a/src/App.css
+++ b/src/App.css
@@ -710,6 +710,7 @@ textarea {
     border: 1px black solid;
     border-radius: 16px;
     background-color: rgba(0, 0, 0, 0.493);
+    overflow-y: scroll;
 }
 .tournament-card-section textarea {
     font-family: "Audiowide", "Tahoma", "Serif";
@@ -730,12 +731,29 @@ textarea {
     gap: 10px;
     width: 300px;
     height: 100%;
-    overflow-y: scroll;
 }
 .tournament-card-participant-list li {
-    border: 1px black solid;
+    border: 1px white solid;
     padding: 10px 30px;
     width: 150px;
+    text-align: center;
+    background-color: rgba(33, 16, 222, 0.679);
+}
+.tournament-card-participant-list-w-prof-ctn {
+}
+.tournament-card-participant-list-w-prof {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 10px;
+    width: 300px;
+    height: 100%;
+}
+.tournament-card-participant-list-w-prof li {
+    border: 1px black solid;
+    padding: 10px 30px;
+    width: 250px;
     text-align: center;
     background-color: rgba(33, 16, 222, 0.679);
 }
