--- a/src/App_small.css
+++ b/src/App_small.css
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css?family=Audiowide");
 
-@media (min-width: 1120px) {
+@media (max-width: 1119px) {
 
 
 body {
